usr/src/uts/common/fs/smbsrv/smb_common_open.c
@@ -529,6 +529,11 @@ smb_open_subr(smb_request_t *sr)
 					smb_node_release(dnode);
 					return (NT_STATUS_ACCESS_DENIED);
 				}
+				if (op->create_options & FILE_DELETE_ON_CLOSE) {
+					smb_node_release(node);
+					smb_node_release(dnode);
+					return (NT_STATUS_CANNOT_DELETE);
+				}
 			}
 		}
 
